# fast-slic

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Pipfile  README.md  cca.cpp  cca.h  cfast_slic.c  cfast_slic.pxd  cfast_slic.pyx  cielab.h  context-impl.cpp  context.cpp  context.h  csimple_crf.pyx  exmaple.py  fast-slic-avx2.cpp  fast-slic-avx2.h  fast-slic-common-impl.hpp  fast-slic-common.h  fast-slic-neon.cpp  fast-slic-neon.h  fast-slic.cpp  fast-slic.h  fast_slic.c  fast_slic.py  kdtree.h  lsc.cpp  lsc.h  parallel.cpp  parallel.h  preemptive.h  setup.py  simd-helper.hpp  simple-crf.cpp  simple-crf.h  simple-crf.hpp  slic.cpp  timer.cpp  (+1 more)
arch/arm/: neon.h
arch/x64/: avx2.h
cpptest/: test_cca.cpp  test_cielab.cpp
cpuid/: cpuid.py
fast_slic/: __init__.py  avx2.py  base_slic.py  crf.py  fast_slic.py  neon.py
src/: cca.cpp  cca.h  cielab.h  context-impl.cpp  context.cpp  context.h  fast-slic-common.h  fast-slic.cpp  fast-slic.h  lsc-builder.cpp  lsc.cpp  lsc.h  parallel.cpp  parallel.h  preemptive.h  recorder.h  simple-crf.cpp  simple-crf.h  tile.h
src/arch/arm/: neon.h
src/arch/x64/: avx2.h
src/cpptest/: test_cca.cpp
test/: test_crf.py  test_slic.py
